# aggregator

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.dev  README.md  agg.csv  config.toml  dev.sh  docker-compose.yml  lta
migrations/: 0001_aggregates.sql  0001_init.sql  0002_ingestions.sql
src/: aggregator.rs  cli.rs  config.rs  db.rs  eco.rs  main.rs  model.rs  pgn.rs  remote.rs  verbose.rs
